`mekotronics-r58x-4g`, `mekotronics-r58x`, `mekotronics-r58-minipc`

--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -19,6 +19,14 @@ jobs:
             branch: "legacy"
             runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
             variant: "" # empty
+          - board: "mekotronics-r58x"
+            branch: "legacy"
+            runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
+            variant: "" # empty
+          - board: "mekotronics-r58-minipc"
+            branch: "legacy"
+            runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
+            variant: "" # empty
           - board: "odroidn2"
             branch: "edge"
             runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
