--- a/.github/workflows/kernel-simple.yml
+++ b/.github/workflows/kernel-simple.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
   workflow_dispatch:
-  workflow_call: 
-    
+  workflow_call:
+
 
 jobs:
 
@@ -15,107 +15,125 @@ jobs:
       fail-fast: false # let other jobs try to complete if one fails
       matrix:
         include:
-          - board: "odroidhc4"
+          - aa: 0100
+            board: "odroidhc4"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "odroidhc4"
+          - aa: 0105
+            board: "odroidhc4"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "uefi-arm64"
+          - aa: 0110
+            board: "uefi-arm64"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "uefi-arm64"
+          - aa: 0115
+            board: "uefi-arm64"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "uefi-x86"
+          - aa: 0120
+            board: "uefi-x86"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "uefi-x86"
+          - aa: 0125
+            board: "uefi-x86"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "rock-5b"
+          - aa: 0130
+            board: "rock-5b"
             branch: "legacy"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "rock-5b"
+          - aa: 0135
+            board: "rock-5b"
             branch: "midstream"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "odroidm1"
+          - aa: 0140
+            board: "odroidm1"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "rock-5b"
+          - aa: 0145
+            board: "rock-5b"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "rpi4b"
+          - aa: 0150
+            board: "rpi4b"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "rpi4b"
+          - aa: 0155
+            board: "rpi4b"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "tinkerboard-2"
+          - aa: 0160
+            board: "tinkerboard-2"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "tinkerboard-2"
+          - aa: 0165
+            board: "tinkerboard-2"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "oneplus5"
+          - aa: 0170
+            board: "oneplus5"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "quartz64a"
+          - aa: 0175
+            board: "quartz64a"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "quartz64a"
+          #- board: "quartz64a"
+          #  branch: "current"
+          #  runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
+          #  variant: ""
+
+          #- board: "tritium-h3"
+          #  branch: "edge"
+          #  runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
+          #  variant: ""
+
+          - aa: 0180
+            board: "tritium-h3"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "tritium-h3"
-            branch: "edge"
-            runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
-            variant: ""
+          #- board: "tritium-h5"
+          #  branch: "edge"
+          #  runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
+          #  variant: ""
 
-          - board: "tritium-h3"
-            branch: "current"
-            runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
-            variant: ""
-
-          - board: "tritium-h5"
-            branch: "edge"
-            runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
-            variant: ""
-
-          - board: "tritium-h5"
+          - aa: 0185
+            board: "tritium-h5"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
@@ -125,40 +143,46 @@ jobs:
           #  runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
           #  variant: ""
 
-          - board: "clearfogpro"
+          - aa: 0190
+            board: "clearfogpro"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "odroidxu4"
+          - aa: 0195
+            board: "odroidxu4"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "odroidxu4"
+          - aa: 0200
+            board: "odroidxu4"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "phytium-d2000"
+          - aa: 0205
+            board: "phytium-d2000"
             branch: "legacy"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "tinkerboard"
+          - aa: 0210
+            board: "tinkerboard"
             branch: "edge"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "tinkerboard"
+          - aa: 0215
+            board: "tinkerboard"
             branch: "current"
             runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
             variant: ""
 
-          - board: "uefi-riscv64"
-            branch: "edge"
-            runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
-            variant: ""
+          #- board: "uefi-riscv64"
+          #  branch: "edge"
+          #  runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
+          #  variant: ""
 
           #- board: "visionfive" # starfive
           #  branch: "edge"
@@ -176,7 +200,7 @@ jobs:
           #  variant: ""
 
     runs-on: "${{ matrix.runner_tags }}"
-    name: "${{ matrix.board }} ${{ matrix.branch }} (${{ matrix.variant }})"
+    name: "$${{ matrix.aa}}=${{ matrix.board }} ${{ matrix.branch }} (${{ matrix.variant }})"
     env:
       BOARD: "${{ matrix.board }}"
       BRANCH: "${{ matrix.branch }}"
