--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -96,4 +96,4 @@ jobs:
           # SHARE_LOG=yes to share logs to pastebin
           bash ./compile.sh uboot \
             "BRANCH=${{env.BRANCH}}" "BOARD=${{env.BOARD}}" ${{env.VARIANT}} \
-            SHARE_LOG=yes
+            SHARE_LOG=yes rpardini-generic
