--- a/.github/workflows/kernel-simple.yml
+++ b/.github/workflows/kernel-simple.yml
@@ -15,6 +15,12 @@ jobs:
       fail-fast: false # let other jobs try to complete if one fails
       matrix:
         include:
+          - aa: 0050
+            board: "orangepizero2"
+            branch: "legacy"
+            runner_tags: [ "self-hosted", "Linux", 'armbian', "artifact-kernel" ]
+            variant: ""
+
           - aa: 0100
             board: "odroidhc4"
             branch: "edge"
