--- a/.github/workflows/uboot-simple.yml
+++ b/.github/workflows/uboot-simple.yml
@@ -15,6 +15,10 @@ jobs:
       fail-fast: false # let other jobs try to complete if one fails
       matrix:
         include:
+          - board: "orangepizero2"
+            branch: "legacy"
+            runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
+            variant: "" # empty
           - board: "mekotronics-r58x-4g"
             branch: "legacy"
             runner_tags: ubuntu-latest #[ "self-hosted", "Linux", 'armbian', "artifact-uboot" ]
@@ -72,7 +76,7 @@ jobs:
 
     steps:
 
-      # Login to ghcr.io, for later uploading rootfs to ghcr.io
+      # Login to ghcr.io, for later uploading rootfs to ghcr.io # @TODO: this can be done much more cheaply and working on non-Docker machines by just writing the token to the correct file and being done about it
       - name: Docker Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -86,6 +90,7 @@ jobs:
           repository: ${{ github.repository_owner }}/armbian-build
           ref: extensions
           fetch-depth: 1
+          # single-branch?
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       - name: Build U-Boot ${{env.BOARD}}:${{env.BRANCH}} (variant ${{env.VARIANT}})
